tests/ui/async-await/issue-73741-type-err-drop-tracking.drop_tracking_mir.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/issue-73741-type-err-drop-tracking.rs:11:7
   |
LL |     1 = 2;
   |     - ^
   |     |
   |     cannot assign to this expression

error: aborting due to previous error

For more information about this error, try `rustc --explain E0070`.
